# RadFact

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile_no_conda  Makefile  README.md  SUPPORT.md  dev_environment.yaml  getting_started.ipynb  mypy.ini  primary_deps.yaml  pyproject.toml  setup_packages.py
.github/workflows/: pr-checks.yaml
configs/: default.yaml  radfact.yaml  report_to_phrases.yaml
configs/endpoints/: azure_chat_openai.yaml  chat_openai.yaml
examples/: findings_generation_examples.csv  grounded_reporting_examples.json  test_examples.json
src/radfact/: paths.py
src/radfact/azure_utils/: auth.py  bearer_token_provider.py
src/radfact/cli/: run_radfact.py  run_radfact_test_examples.py  run_report_to_phrases.py
src/radfact/data_utils/: grounded_phrase_list.py
src/radfact/llm_utils/: endpoint.py  text_utils.py
src/radfact/llm_utils/engine/: arguments.py  data_subset.py  endpoint_utils.py  engine.py  redis_cache.py
src/radfact/llm_utils/nli/: processor.py  schema.py
src/radfact/llm_utils/nli/prompts/: few_shot_examples.json  system_message_ev_singlephrase.txt
src/radfact/llm_utils/processor/: base_processor.py  structured_processor.py
src/radfact/llm_utils/report_to_phrases/: processor.py  schema.py
src/radfact/llm_utils/report_to_phrases/prompts/: few_shot_examples.json  system_message.txt
src/radfact/metric/: bootstrapping.py  box_metrics.py  print_utils.py  radfact.py  schema.py
tests/data_utils/: test_grounded_phrase_list.py
tests/llm_utils/: test_text_utils.py
tests/llm_utils/engine/: test_engine.py  test_redis_cache.py
tests/llm_utils/report_to_phrases/: test_schema.py
tests/metric/: test_box_metrics.py  test_radfact.py
